--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.0.0",
     "@ionic/pro": "2.0.4",
+    "@ionic/storage": "^2.2.0",
+    "angularfire2": "^5.1.1",
     "core-js": "^2.5.4",
+    "firebase": "^5.8.2",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
@@ -39,9 +42,10 @@
     "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.3.0",
-    "@types/node": "~10.12.0",
+    "@ionic/lab": "1.0.20",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~10.12.0",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
